--- a/src/app/admin/barber-actions/barber-actions.component.html
+++ b/src/app/admin/barber-actions/barber-actions.component.html
@@ -1,15 +1,15 @@
 <!-- App-Background Component -->
-<app-background imageUrl="../../../assets/backgrounds/barber-admin.jpg"></app-background>
+<app-background imageUrl="./assets/backgrounds/barber-admin.jpg"></app-background>
 <!-- Admin-Actions 1.User-Appointment 2.Admin-Dashboard-->
 <main class="admin-selection">
     <!-- 1.User-Appointment -->
     <button class="action" (click)="userDirect()">
-        <img src="../../../assets/icons/user.jpg" alt="user">
+        <img src="./assets/icons/user.jpg" alt="user">
         <span>USER</span>
     </button>
     <!-- 2.Admin-Dashboard -->
     <button class="action" (click)="adminDirect()">
-        <img src="../../../assets/icons/barber.jpg" alt="login">
+        <img src="./assets/icons/barber.jpg" alt="login">
         <span>ADMIN</span>
     </button>
 </main>
