--- a/src/app/user/appointment-display/appointment-display.component.html
+++ b/src/app/user/appointment-display/appointment-display.component.html
@@ -1,5 +1,5 @@
 <!-- App-Background-component -->
-<app-background imageUrl="../../../assets/backgrounds/appointments.jpg"></app-background>
+<app-background imageUrl="./assets/backgrounds/appointments.jpg"></app-background>
 
 <!-- Book-now-action-->
 <header class="book-container">
