--- a/src/app/user/booking-form/booking-form.component.html
+++ b/src/app/user/booking-form/booking-form.component.html
@@ -1,5 +1,5 @@
 <!-- App-Background-component -->
-<app-background imageUrl="../../../assets/backgrounds/booking.jpg"></app-background>
+<app-background imageUrl="./assets/backgrounds/booking.jpg"></app-background>
 <div class="logo-container">
     <app-logo width="100px" height="90px" fontSize="35px"></app-logo>
 </div>
